Update Dockerfile "sources" for build

--- a/pollex-flask/Makefile
+++ b/pollex-flask/Makefile
@@ -46,7 +46,7 @@ MAKE = make
 
 # Sources
 
-sources = run.py # templates/*.html static/*.css
+sources = run.py app/* config/* instance/*
 
 # Do it all
 
