--- a/Dockerfile-angular
+++ b/Dockerfile-angular
@@ -46,5 +46,6 @@ EXPOSE 4200
 
 # Start
 
-ENTRYPOINT [ "ng", "serve"]
-
+#ENTRYPOINT  ["ng", "serve", "--host 0.0.0.0"]
+#ENTRYPOINT  ng serve --host 0.0.0.0
+CMD ng serve --host 0.0.0.0 
