--- a/Dockerfile-angular
+++ b/Dockerfile-angular
@@ -49,3 +49,4 @@ EXPOSE 4200
 #ENTRYPOINT  ["ng", "serve", "--host 0.0.0.0"]
 #ENTRYPOINT  ng serve --host 0.0.0.0
 CMD ng serve --host 0.0.0.0 
+LABEL status=current
